--- a/index.html
+++ b/index.html
@@ -254,8 +254,342 @@
       </section>
     </div>
     <!--Menu Section-->
+    <div class="container">
+      <section class="menu" id="menu">
+        <h3 class="sub-heading">Our Menu</h3>
+        <h1 class="heading">TODAY'S SPECIALITY</h1>
+        <div class="box-container">
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-1.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">129.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-2.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">100.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-3.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">129.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-4.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">99.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-5.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">89.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-6.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">69.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-7.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">79.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-8.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">89.99฿</span>
+            </div>
+          </div>
+          <div class="box">
+            <div class="image">
+              <img src="images/menu-9.jpg" alt="" />
+              <a class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i>
+              </div>
+              <h3>Delicious food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <a href="#" class="btn">Add to cart</a>
+              <span class="price">99.99฿</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <!--Review Section-->
+    <div class="container">
+      <section class="review" id="review">
+        <h3 class="sub-heading">Customer's Review</h3>
+        <h1 class="heading">WHAT THEY SAY</h1>
+        <div class="swiper review-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide slide">
+              <i class="fa-solid fa-quote-right"></i>
+              <div class="user">
+                <img src="images/pic-1.png" alt="" />
+                <div class="user-info">
+                  <h3>John Deo</h3>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half"></i>
+                  </div>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis incidunt deleniti harum fugit, suscipit
+                voluptatibus eligendi iusto distinctio sed quod sint saepe
+                facere, ea magnam? Accusantium fuga atque optio dolore!
+              </p>
+            </div>
+            <div class="swiper-slide slide">
+              <i class="fa-solid fa-quote-right"></i>
+              <div class="user">
+                <img src="images/pic-2.png" alt="" />
+                <div class="user-info">
+                  <h3>John Deo</h3>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half"></i>
+                  </div>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis incidunt deleniti harum fugit, suscipit
+                voluptatibus eligendi iusto distinctio sed quod sint saepe
+                facere, ea magnam? Accusantium fuga atque optio dolore!
+              </p>
+            </div>
+            <div class="swiper-slide slide">
+              <i class="fa-solid fa-quote-right"></i>
+              <div class="user">
+                <img src="images/pic-3.png" alt="" />
+                <div class="user-info">
+                  <h3>John Deo</h3>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half"></i>
+                  </div>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis incidunt deleniti harum fugit, suscipit
+                voluptatibus eligendi iusto distinctio sed quod sint saepe
+                facere, ea magnam? Accusantium fuga atque optio dolore!
+              </p>
+            </div>
+            <div class="swiper-slide slide">
+              <i class="fa-solid fa-quote-right"></i>
+              <div class="user">
+                <img src="images/pic-4.png" alt="" />
+                <div class="user-info">
+                  <h3>John Deo</h3>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half"></i>
+                  </div>
+                </div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis incidunt deleniti harum fugit, suscipit
+                voluptatibus eligendi iusto distinctio sed quod sint saepe
+                facere, ea magnam? Accusantium fuga atque optio dolore!
+              </p>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+    </div>
     <!--Order Section-->
+    <div class="container">
+      <section class="order" id="order">
+        <h3 class="sub-heading">Order Now</h3>
+        <h1 class="heading">FREE AND FAST</h1>
+        <form action="">
+          <div class="inputBox">
+            <div class="input">
+              <span>Your name</span>
+              <input type="text" placeholder="Enter your name" />
+            </div>
+            <div class="input">
+              <span>Your number</span>
+              <input type="number" placeholder="Enter your number" />
+            </div>
+          </div>
+          <div class="inputBox">
+            <div class="input">
+              <span>Your order</span>
+              <input type="text" placeholder="Enter food name" />
+            </div>
+            <div class="input">
+              <span>Addition food</span>
+              <input type="text" placeholder="Extra with food" />
+            </div>
+          </div>
+          <div class="inputBox">
+            <div class="input">
+              <span>How much</span>
+              <input type="text" placeholder="How many order" />
+            </div>
+            <div class="input">
+              <span>Date & Time</span>
+              <input type="datetime-local" />
+            </div>
+          </div>
+          <div class="inputBox">
+            <div class="input">
+              <span>Your address</span>
+              <textarea
+                placeholder="Enter your address"
+                name=""
+                id=""
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
+            <div class="input">
+              <span>Your message</span>
+              <textarea
+                placeholder="Enter your message"
+                name=""
+                id=""
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
+          </div>
+          <input type="submit" value="Order now" class="btn" />
+        </form>
+      </section>
+    </div>
     <!--Footer Section-->
     <!--Loader Section-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
