--- a/index.html
+++ b/index.html
@@ -591,7 +591,48 @@
       </section>
     </div>
     <!--Footer Section-->
+    <div class="container">
+      <section class="footer">
+        <div class="box-container">
+          <div class="box">
+            <h3>Location</h3>
+            <a href="#">Thai</a>
+            <a href="#">US</a>
+            <a href="#">Japan</a>
+            <a href="#">China</a>
+            <a href="#">Korea</a>
+          </div>
+          <div class="box">
+            <h3>Quick Links</h3>
+            <a href="#">Home</a>
+            <a href="#">Dishes</a>
+            <a href="#">About</a>
+            <a href="#">Menu</a>
+            <a href="#">Review</a>
+            <a href="#">Order</a>
+          </div>
+          <div class="box">
+            <h3>Contact Info</h3>
+            <a href="#">012-345-6789</a>
+            <a href="#">000-000-0000</a>
+            <a href="#">SE-Resto@gmail.com</a>
+            <a href="#">Nakhon Pathom, Thailand</a>
+          </div>
+          <div class="box">
+            <h3>Follow us</h3>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instragram</a>
+            <a href="#">LinkedIn</a>
+          </div>
+        </div>
+        <div class="credit">Copyright @ 2023 by <span>SE-NPRU</span></div>
+      </section>
+    </div>
     <!--Loader Section-->
+    <div class="loader-container">
+      <img src="images/loader.gif" alt="" />
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
